# classical-ml-benchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MODEL_CARD_covertype.md  MODEL_CARD_parkinsons.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
artifacts/final/covertype/: classifier_sweep_decision_tree.csv  classifier_sweep_gradient_boosting.csv  classifier_sweep_knn.csv  classifier_sweep_random_forest.csv  classifier_sweep_xgboost.csv  feature_ranking_anova.csv  feature_selection_per_class.csv  feature_selection_sweep.csv  final_metrics.json  per_class_metrics.csv  report_table_4_3_2_scaling.csv  report_table_4_3_3_feature_selection.csv  stage_1_results.csv  tuned_overall_metrics.csv  tuning_results.csv
artifacts/final/parkinsons/: classifier_sweep_decision_tree.csv  classifier_sweep_gradient_boosting.csv  classifier_sweep_knn.csv  classifier_sweep_random_forest.csv  classifier_sweep_xgboost.csv  feature_ranking_anova.csv  feature_selection_per_class.csv  feature_selection_sweep.csv  final_metrics.json  model.joblib  pca_sweep.csv  report_table_4_2_2_scaling.csv  report_table_4_2_3_feature_selection.csv  report_table_4_2_4_pca.csv  stage_1_results.csv  tuned_overall_metrics.csv  tuning_results.csv
configs/: covertype.yaml  hyperparameters.yaml  hyperparameters_full.yaml  parkinsons.yaml
configs/experiments/: report.yaml
reports/: report.tex
scripts/: analysis.py  compare_results.py  download_data.py  preprocessing.py
src/data_science/: datasets.py  main.py  pipeline.py
(+30 files in other folders)
